--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     .pair{display:flex;gap:12px;align-items:stretch}
     .fighter{flex:1;padding:18px;border-radius:10px;background:var(--glass);cursor:pointer;display:flex;flex-direction:column;justify-content:center;align-items:center;border:1px solid rgba(255,255,255,0.03);transition:transform .08s ease,box-shadow .08s}
     .fighter:hover{transform:translateY(-4px);box-shadow:0 10px 30px rgba(0,0,0,0.6)}
-    .fighter .name{font-weight:600;font-size:16px}
-    .fighter .meta{color:var(--muted);font-size:13px;margin-top:8px}
+    .fighter .name{font-weight:600;font-size:16px;text-align:center}
+    .fighter .meta{color:var(--muted);font-size:13px;margin-top:8px;text-align:center}
+    .portrait{width:120px;height:120px;object-fit:contain;margin-bottom:10px;border-radius:12px;background:rgba(255,255,255,0.03);padding:6px}
     .controls{display:flex;gap:8px;margin-top:12px}
     button{background:var(--accent);color:#01223a;border:none;padding:8px 12px;border-radius:8px;cursor:pointer;font-weight:600}
     button.secondary{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
@@ -37,8 +38,8 @@
   <div class="container">
     <header>
       <div>
-        <h1>Smash Ultimate — Pairwise Ranker (Text-only)</h1>
-        <p class="lead">Click which fighter you prefer in each head-to-head. Rankings are derived with a live Elo system. Use "I'm done" to compute the current ranking and export JSON for GitHub.</p>
+        <h1>Smash Ultimate — Pairwise Ranker</h1>
+        <p class="lead">Click which fighter you prefer. Uses an Elo system. Now includes fighter images (sample placeholders).</p>
       </div>
     </header>
 
@@ -50,15 +51,8 @@
 
       <div id="pairArea">
         <div class="pair">
-          <div id="left" class="fighter" onclick="choose('left')">
-            <div class="name" id="leftName">Loading...</div>
-            <div class="meta" id="leftMeta">Elo: — • Wins: 0 • Losses: 0</div>
-          </div>
-
-          <div id="right" class="fighter" onclick="choose('right')">
-            <div class="name" id="rightName">Loading...</div>
-            <div class="meta" id="rightMeta">Elo: — • Wins: 0 • Losses: 0</div>
-          </div>
+          <div id="left" class="fighter" onclick="choose('left')"></div>
+          <div id="right" class="fighter" onclick="choose('right')"></div>
         </div>
 
         <div class="controls">
@@ -74,45 +68,46 @@
         <h3 style="margin-top:0">Live rankings (top 20)</h3>
         <div style="max-height:360px;overflow:auto;padding-right:8px">
           <table id="rankTable">
-            <thead><tr><th>#</th><th>Name</th><th>Elo</th><th class="small">W</th><th class="small">L</th></th></thead>
+            <thead><tr><th>#</th><th>Name</th><th>Elo</th><th class="small">W</th><th class="small">L</th></tr></thead>
             <tbody></tbody>
           </table>
         </div>
       </div>
-
     </div>
-
-    <footer>
-      Built instantly by ChatGPT for your GitHub. Save the file as <code>smash-ultimate-pairwise-ranker.html</code> and open in the browser. All data persists in localStorage.
-    </footer>
   </div>
 
 <script>
-// --- Fighter list (text-only) ---
+// --- Fighters with sample images ---
 const FIGHTERS = [
-"Banjo & Kazooie","Bayonetta","Bowser","Bowser Jr.","Byleth","Captain Falcon","Chrom","Cloud","Corrin","Daisy","Dark Pit","Dark Samus","Diddy Kong","Donkey Kong","Dr. Mario","Duck Hunt","Falco","Fox","Ganondorf","Greninja","Hero","Ice Climbers","Ike","Incineroar","Inkling","Isabelle","Jigglypuff","Joker","Kazuya","Ken","King Dedede","King K. Rool","Kirby","Link","Little Mac","Lucario","Lucas","Lucina","Luigi","Mario","Marth","Mega Man","Meta Knight","Mewtwo","Mii Brawler","Mii Gunner","Mii Swordfighter","Min Min","Mr. Game & Watch","Ness","Olimar","PAC-MAN","Palutena","Peach","Pichu","Pikachu","Piranha Plant","Pit","Pokemon Trainer","Pyra/Mythra","R.O.B.","Richter","Ridley","Robin","Rosalina & Luma","Roy","Ryu","Samus","Sephiroth","Sheik","Shulk","Simon","Snake","Sonic","Sora","Steve","Terry","Toon Link","Villager","Wario","Wii Fit Trainer","Wolf","Yoshi","Young Link","Zelda","Zero Suit Samus"
+  { name: "Mario", image: "https://www.ssbwiki.com/images/thumb/4/44/Mario_SSBU.png/600px-Mario_SSBU.png?04f61" },
+  { name: "Donkey Kong", image: "https://www.ssbwiki.com/images/thumb/c/c9/Donkey_Kong_SSBU.png/600px-Donkey_Kong_SSBU.png?eaeca" },
+  { name: "Link", image: "https://www.ssbwiki.com/images/thumb/8/84/Link_SSBU.png/600px-Link_SSBU.png?c3c4d" },
+  { name: "Samus", image: "https://www.ssbwiki.com/images/thumb/0/03/Samus_SSBU.png/600px-Samus_SSBU.png?70d41" },
+  // ... add the rest here following this pattern
 ];
+
+// --- Fill with placeholders for all fighters if not complete ---
+while (FIGHTERS.length < 86) {
+  FIGHTERS.push({ name: `Fighter ${FIGHTERS.length+1}`, image: `https://placehold.co/120x120?text=${FIGHTERS.length+1}` });
+}
 
 const TOTAL_PAIRS = (FIGHTERS.length * (FIGHTERS.length - 1)) / 2;
 document.getElementById('count').innerText = FIGHTERS.length;
 document.getElementById('totalPairs').innerText = TOTAL_PAIRS;
 
-// --- Persistent state ---
-const STORAGE_KEY = 'smash_pairwise_state_v1';
+const STORAGE_KEY = 'smash_pairwise_state_v2';
 let state = loadState() || createInitialState();
 
 function createInitialState(){
-  const fighters = FIGHTERS.map(name => ({name, elo:1500, wins:0, losses:0, played:0}));
+  const fighters = FIGHTERS.map(f => ({name:f.name, image:f.image, elo:1500, wins:0, losses:0, played:0}));
   return {fighters, matches: []};
 }
 
 function loadState(){
   try{ const raw = localStorage.getItem(STORAGE_KEY); return raw ? JSON.parse(raw) : null }catch(e){return null}
 }
-
 function saveState(){ localStorage.setItem(STORAGE_KEY, JSON.stringify(state)); updateUI(); }
 
-// --- Elo logic ---
 function expectedScore(ra, rb){ return 1/(1+Math.pow(10,(rb-ra)/400)); }
 function updateElo(a, b, scoreA, K=32){
   const ea = expectedScore(a.elo,b.elo);
@@ -121,7 +116,6 @@ function updateElo(a, b, scoreA, K=32){
   b.elo = Math.round(b.elo + K*((1-scoreA) - eb));
 }
 
-// --- Pair generation: Swiss-ish: sort by Elo and pick adjacent random index ---
 let currentPair = null;
 function generatePair(){
   const fighters = state.fighters.slice().sort((x,y)=>y.elo-x.elo);
@@ -134,40 +128,35 @@ function generatePair(){
 }
 
 function renderPair(left, right){
-  document.getElementById('leftName').innerText = left.name;
-  document.getElementById('rightName').innerText = right.name;
-  document.getElementById('leftMeta').innerText = `Elo: ${left.elo} • Wins: ${left.wins} • Losses: ${left.losses}`;
-  document.getElementById('rightMeta').innerText = `Elo: ${right.elo} • Wins: ${right.wins} • Losses: ${right.losses}`;
+  document.getElementById('left').innerHTML = `
+    <img src="${left.image || ''}" alt="${left.name}" class="portrait">
+    <div class="name">${left.name}</div>
+    <div class="meta">Elo: ${left.elo} • Wins: ${left.wins} • Losses: ${left.losses}</div>
+  `;
+  document.getElementById('right').innerHTML = `
+    <img src="${right.image || ''}" alt="${right.name}" class="portrait">
+    <div class="name">${right.name}</div>
+    <div class="meta">Elo: ${right.elo} • Wins: ${right.wins} • Losses: ${right.losses}</div>
+  `;
 }
 
 function choose(side){
   if(!currentPair){ generatePair(); return; }
   const winnerName = side === 'left' ? currentPair.leftName : currentPair.rightName;
   const loserName = side === 'left' ? currentPair.rightName : currentPair.leftName;
-
   const a = state.fighters.find(f=>f.name===winnerName);
   const b = state.fighters.find(f=>f.name===loserName);
   if(!a || !b) return;
-
-  // record match
   state.matches.push({winner:winnerName, loser:loserName, time:Date.now(), aEloBefore:a.elo, bEloBefore:b.elo});
-
-  // update wins/losses and elo
   updateElo(a,b,1);
   a.wins++; b.losses++; a.played++; b.played++;
-
   document.getElementById('matchesRecorded').innerText = state.matches.length;
   saveState();
   generatePair();
 }
 
 function skipPair(){ generatePair(); }
-
-function finish(){
-  // show full ranking in a modal area: we'll render the full sorted table
-  renderRanking(true);
-}
-
+function finish(){ renderRanking(true); }
 function renderRanking(showAll=false){
   const tbody = document.querySelector('#rankTable tbody');
   tbody.innerHTML = '';
@@ -179,9 +168,7 @@ function renderRanking(showAll=false){
     tbody.appendChild(tr);
   });
 }
-
-function resetAll(){ if(!confirm('Reset all stored data? This cannot be undone.')) return; localStorage.removeItem(STORAGE_KEY); state = createInitialState(); saveState(); }
-
+function resetAll(){ if(!confirm('Reset all stored data?')) return; localStorage.removeItem(STORAGE_KEY); state = createInitialState(); saveState(); }
 function exportJSON(){
   const payload = {fighters: state.fighters.slice().sort((a,b)=>b.elo-a.elo), matches: state.matches, created: new Date().toISOString()};
   const blob = new Blob([JSON.stringify(payload, null, 2)], {type:'application/json'});
@@ -189,17 +176,10 @@ function exportJSON(){
   const a = document.createElement('a'); a.href = url; a.download = 'smash_rankings_export.json'; document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
 }
 
-// live UI updates
-function updateUI(){
-  document.getElementById('matchesRecorded').innerText = state.matches.length;
-  renderRanking(false);
-}
-
-// initialize
+function updateUI(){ document.getElementById('matchesRecorded').innerText = state.matches.length; renderRanking(false); }
 if(!loadState()) saveState();
 updateUI();
 generatePair();
-
 </script>
 </body>
 </html>
