--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container">
     <header>
       <div>
-        <h1>Smash Ultimate — Pairwise Ranker</h1>
+        <h1>Smash Ultimate — Pairwise er</h1>
         <p class="lead">Click which fighter you prefer. Uses an Elo system. Now includes fighter images (sample placeholders).</p>
       </div>
     </header>
@@ -64,8 +64,8 @@
         </div>
       </div>
 
-      <div class="ranklist card" style="margin-top:14px;">
-        <h3 style="margin-top:0">Live rankings (top 20)</h3>
+      <div class="list card" style="margin-top:14px;">
+        <h3 style="margin-top:0">Live rankings</h3>
         <div style="max-height:360px;overflow:auto;padding-right:8px">
           <table id="rankTable">
             <thead><tr><th>#</th><th>Name</th><th>Elo</th><th class="small">W</th><th class="small">L</th></tr></thead>
