--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@ const FIGHTERS = [
   { name: "Donkey Kong", image: "https://www.ssbwiki.com/images/thumb/c/c9/Donkey_Kong_SSBU.png/600px-Donkey_Kong_SSBU.png?eaeca" },
   { name: "Link", image: "https://www.ssbwiki.com/images/thumb/8/84/Link_SSBU.png/600px-Link_SSBU.png?c3c4d" },
   { name: "Samus", image: "https://www.ssbwiki.com/images/thumb/0/03/Samus_SSBU.png/600px-Samus_SSBU.png?70d41" },
+  { name: "Dark Samus", image: "https://www.ssbwiki.com/images/thumb/a/a6/Dark_Samus_SSBU.png/600px-Dark_Samus_SSBU.png?89660" },
+  { name: "Yoshi", image: "https://www.ssbwiki.com/images/thumb/8/8d/Yoshi_SSBU.png/600px-Yoshi_SSBU.png?6e636" },
+  { name: "Kirby", image: "https://www.ssbwiki.com/images/thumb/0/07/Kirby_SSBU.png/600px-Kirby_SSBU.png?2b27a" },
+  { name: "Fox", image: "https://www.ssbwiki.com/images/thumb/2/2f/Fox_SSBU.png/600px-Fox_SSBU.png?ced8f" },
+  { name: "Pikachu", image: "https://www.ssbwiki.com/images/thumb/9/93/Pikachu_SSBU.png/600px-Pikachu_SSBU.png?641bd" },
+  { name: "Luigi", image: "https://www.ssbwiki.com/images/thumb/b/bb/Luigi_SSBU.png/547px-Luigi_SSBU.png?98af0" },
+  { name: "Ness", image: "https://www.ssbwiki.com/images/thumb/8/82/Ness_SSBU.png/600px-Ness_SSBU.png?74584" },
+  { name: "Captain Falcon", image: "https://www.ssbwiki.com/images/thumb/d/da/Captain_Falcon_SSBU.png/600px-Captain_Falcon_SSBU.png?aec93" },
+  { name: "Jigglypuff", image: "https://www.ssbwiki.com/images/thumb/6/6a/Jigglypuff_SSBU.png/600px-Jigglypuff_SSBU.png?a2c18" }
   // ... add the rest here following this pattern
 ];
 
