--- a/index.html
+++ b/index.html
@@ -92,6 +92,80 @@ const FIGHTERS = [
   { name: "Ness", image: "https://www.ssbwiki.com/images/thumb/8/82/Ness_SSBU.png/600px-Ness_SSBU.png?74584" },
   { name: "Captain Falcon", image: "https://www.ssbwiki.com/images/thumb/d/da/Captain_Falcon_SSBU.png/600px-Captain_Falcon_SSBU.png?aec93" },
   { name: "Jigglypuff", image: "https://www.ssbwiki.com/images/thumb/6/6a/Jigglypuff_SSBU.png/600px-Jigglypuff_SSBU.png?a2c18" }
+  { name: "Peach", image: "https://www.ssbwiki.com/images/thumb/7/74/Peach_SSBU.png/531px-Peach_SSBU.png?17a3e"},
+{ name: "Daisy", image: "https://www.ssbwiki.com/images/thumb/2/21/Daisy_SSBU.png/600px-Daisy_SSBU.png?6c633"},
+{ name: "Bowser", image: "https://www.ssbwiki.com/images/thumb/4/49/Bowser_SSBU.png/600px-Bowser_SSBU.png?3df64"},
+ {name: "Ice Climbers", image: "https://www.ssbwiki.com/images/thumb/1/12/Ice_Climbers_SSBU.png/600px-Ice_Climbers_SSBU.png?dc85a"},
+{name: "Sheik", image: "https://www.ssbwiki.com/images/thumb/0/00/Sheik_SSBU.png/600px-Sheik_SSBU.png?23081"},
+ {name: "Zelda", image: "https://www.ssbwiki.com/images/thumb/c/c8/Zelda_SSBU.png/600px-Zelda_SSBU.png?21603"},
+{name: "Dr. Mario", image: "https://www.ssbwiki.com/images/thumb/3/3f/Dr._Mario_SSBU.png/600px-Dr._Mario_SSBU.png?0ac29"},
+ {name: "Pichu", image: "https://www.ssbwiki.com/images/thumb/c/c1/Pichu_SSBU.png/600px-Pichu_SSBU.png?e7b4c"},
+  {name: "Falco", image: "https://www.ssbwiki.com/images/thumb/8/80/Falco_SSBU.png/600px-Falco_SSBU.png?8947a"},
+   {name: "Marth", image: "https://www.ssbwiki.com/images/thumb/e/e9/Marth_SSBU.png/600px-Marth_SSBU.png?172cc"},
+{name: "Lucina", image: "https://www.ssbwiki.com/images/thumb/d/dc/Lucina_SSBU.png/600px-Lucina_SSBU.png?46377"},
+ {name: "Young Link", image: "https://www.ssbwiki.com/images/thumb/8/8a/Young_Link_SSBU.png/600px-Young_Link_SSBU.png?cd367"},
+{name: "Ganondorf", image: "https://www.ssbwiki.com/images/thumb/9/91/Ganondorf_SSBU.png/595px-Ganondorf_SSBU.png?a7dba"},
+ {name: "Mewtwo", image: "https://www.ssbwiki.com/images/thumb/d/de/Mewtwo_SSBU.png/594px-Mewtwo_SSBU.png?9c33d"},
+ {name: "Roy", image: "https://www.ssbwiki.com/images/thumb/9/9d/Roy_SSBU.png/600px-Roy_SSBU.png?6ded3"},
+  {name: "Chrom", image: "https://www.ssbwiki.com/images/thumb/5/57/Chrom_SSBU.png/510px-Chrom_SSBU.png?9e715"},
+ {name: "Mr. Game & Watch", image: "https://www.ssbwiki.com/images/thumb/c/cb/Mr._Game_%26_Watch_SSBU.png/600px-Mr._Game_%26_Watch_SSBU.png?d0b41"},
+  {name: "Meta Knight", image: "https://www.ssbwiki.com/images/thumb/0/00/Meta_Knight_SSBU.png/600px-Meta_Knight_SSBU.png?5fbe9"},
+ {name: "Pit", image: "https://www.ssbwiki.com/images/thumb/3/38/Pit_SSBU.png/600px-Pit_SSBU.png?c246d"},
+  {name: "Dark Pit", image: "https://www.ssbwiki.com/images/thumb/0/09/Dark_Pit_SSBU.png/568px-Dark_Pit_SSBU.png?fcb64"},
+ {name: "Zero Suit Samus", image: "https://www.ssbwiki.com/images/thumb/f/f0/Zero_Suit_Samus_SSBU.png/600px-Zero_Suit_Samus_SSBU.png?51df7"},
+  {name: "Wario", image: "https://www.ssbwiki.com/images/thumb/0/04/Wario_SSBU.png/600px-Wario_SSBU.png?54ad1"},
+ {name: "Snake", image: "https://www.ssbwiki.com/images/thumb/0/02/Snake_SSBU.png/492px-Snake_SSBU.png?3368c"},
+  {name: "Ike", image: "https://www.ssbwiki.com/images/thumb/8/86/Ike_SSBU.png/600px-Ike_SSBU.png?0d3bd"},
+ {name: "Pokemon Trainer", image: "https://www.ssbwiki.com/images/thumb/0/0f/Pok%C3%A9mon_Trainer_SSBU.png/800px-Pok%C3%A9mon_Trainer_SSBU.png?2cac1"},
+  {name: "Diddy Kong", image: "https://www.ssbwiki.com/images/thumb/a/a7/Diddy_Kong_SSBU.png/579px-Diddy_Kong_SSBU.png?1c255"},
+ {name: "Lucas", image: "https://www.ssbwiki.com/images/thumb/8/81/Lucas_SSBU.png/600px-Lucas_SSBU.png?be299"},
+  {name: "Sonic", image: "https://www.ssbwiki.com/images/thumb/b/ba/Sonic_SSBU.png/609px-Sonic_SSBU.png?c2db0"},
+ {name: "King Dedede", image: "https://www.ssbwiki.com/images/thumb/f/f5/King_Dedede_SSBU.png/600px-King_Dedede_SSBU.png?c3c4b"},
+  {name: "Olimar", image: "https://www.ssbwiki.com/images/thumb/b/b3/Olimar_SSBU.png/600px-Olimar_SSBU.png?a71a2"},
+ {name: "Lucario", image: "https://www.ssbwiki.com/images/thumb/0/08/Lucario_SSBU.png/600px-Lucario_SSBU.png?695eb"},
+  {name: "R.O.B.", image: "https://www.ssbwiki.com/images/thumb/6/60/R.O.B._SSBU.png/600px-R.O.B._SSBU.png?b37ef"},
+ {name: "Toon Link", image: "https://www.ssbwiki.com/images/thumb/5/56/Toon_Link_SSBU.png/569px-Toon_Link_SSBU.png?26846"},
+  {name: "Wolf", image: "https://www.ssbwiki.com/images/thumb/8/8a/Wolf_SSBU.png/647px-Wolf_SSBU.png?0600c"},
+ {name: "Villager", image: "https://www.ssbwiki.com/images/thumb/a/ac/Villager_SSBU.png/600px-Villager_SSBU.png?0890c"},
+  {name: "Mega Man", image: "https://www.ssbwiki.com/images/thumb/4/46/Mega_Man_SSBU.png/600px-Mega_Man_SSBU.png?dd7e6"},
+ {name: "Wii Fit Trainer", image: "https://www.ssbwiki.com/images/thumb/f/ff/Wii_Fit_Trainer_SSBU.png/600px-Wii_Fit_Trainer_SSBU.png?f3628"},
+  {name: "Rosalina & Luma", image: "https://www.ssbwiki.com/images/thumb/1/16/Rosalina_%26_Luma_SSBU.png/600px-Rosalina_%26_Luma_SSBU.png?8df3e"},
+ {name: "Little Mac", image: "https://www.ssbwiki.com/images/thumb/5/53/Little_Mac_SSBU.png/600px-Little_Mac_SSBU.png?40234"},
+  {name: "Greninja", image: "https://www.ssbwiki.com/images/thumb/d/da/Greninja_SSBU.png/600px-Greninja_SSBU.png?eef65"},
+ {name: "Palutena", image: "https://www.ssbwiki.com/images/thumb/6/6b/Palutena_SSBU.png/568px-Palutena_SSBU.png?50d41"},
+  {name: "PAC-MAN", image: "https://www.ssbwiki.com/images/thumb/0/03/Pac-Man_SSBU.png/600px-Pac-Man_SSBU.png?3663c"},
+ {name: "Robin", image: "https://www.ssbwiki.com/images/thumb/8/82/Robin_SSBU.png/600px-Robin_SSBU.png?48871"},
+  {name: "Shulk", image: "https://www.ssbwiki.com/images/thumb/0/0f/Shulk_SSBU.png/600px-Shulk_SSBU.png?3df01"},
+ {name: "Bowser Jr.", image: "https://www.ssbwiki.com/images/thumb/2/2b/Bowser_Jr._SSBU.png/600px-Bowser_Jr._SSBU.png?a4c7f"},
+  {name: "Duck Hunt", image: "https://www.ssbwiki.com/images/thumb/d/d8/Duck_Hunt_SSBU.png/600px-Duck_Hunt_SSBU.png?93950"},
+ {name: "Ryu", image: "https://www.ssbwiki.com/images/thumb/6/61/Ryu_SSBU.png/600px-Ryu_SSBU.png?11dab"},
+  {name: "Ken", image: "https://www.ssbwiki.com/images/thumb/f/f6/Ken_SSBU.png/600px-Ken_SSBU.png?f93c0"},
+ {name: "Cloud", image: "https://www.ssbwiki.com/images/thumb/b/b3/Cloud_SSBU.png/600px-Cloud_SSBU.png?7c2b9"},
+  {name: "Corrin", image: "https://www.ssbwiki.com/images/thumb/c/c4/Corrin_SSBU.png/600px-Corrin_SSBU.png?de9e8"},
+ {name: "Bayonetta", image: "https://www.ssbwiki.com/images/thumb/7/7c/Bayonetta_SSBU.png/611px-Bayonetta_SSBU.png?2c193"},
+  {name: "Inkling", image: "https://www.ssbwiki.com/images/thumb/2/2e/Inkling_SSBU.png/603px-Inkling_SSBU.png?b7948"},
+ {name: "Ridley", image: "https://www.ssbwiki.com/images/thumb/2/27/Ridley_SSBU.png/600px-Ridley_SSBU.png?fa328"},
+  {name: "Simon", image: "https://www.ssbwiki.com/images/thumb/9/95/Simon_SSBU.png/600px-Simon_SSBU.png?04f7b"},
+ {name: "Richter", image: "https://www.ssbwiki.com/images/thumb/c/c2/Richter_SSBU.png/600px-Richter_SSBU.png?44b46"},
+  {name: "King K. Rool", image: "https://www.ssbwiki.com/images/thumb/b/b6/King_K._Rool_SSBU.png/600px-King_K._Rool_SSBU.png?94d39"},
+ {name: "Isabelle", image: "https://www.ssbwiki.com/images/thumb/2/2b/Isabelle_SSBU.png/600px-Isabelle_SSBU.png?f09f3"},
+  {name: "Incineroar", image: "https://www.ssbwiki.com/images/thumb/c/c4/Incineroar_SSBU.png/600px-Incineroar_SSBU.png?2efa0"},
+ {name: "Piranha Plant", image: "https://www.ssbwiki.com/images/thumb/f/f0/Piranha_Plant_SSBU.png/600px-Piranha_Plant_SSBU.png?ab23b"},
+  {name: "Joker", image: "https://www.ssbwiki.com/images/thumb/5/5c/Joker_SSBU.png/600px-Joker_SSBU.png?77feb"},
+ {name: "Hero", image: "https://www.ssbwiki.com/images/thumb/0/07/Hero_SSBU.png/600px-Hero_SSBU.png?04c24"},
+  {name: "Banjo & Kazooie", image: "https://www.ssbwiki.com/images/thumb/9/97/Banjo_%26_Kazooie_SSBU.png/600px-Banjo_%26_Kazooie_SSBU.png?54adc"},
+ {name: "Terry", image: "https://www.ssbwiki.com/images/thumb/f/f5/Terry_SSBU.png/600px-Terry_SSBU.png?e5810"},
+  {name: "Byleth", image: "https://www.ssbwiki.com/images/thumb/3/3d/Byleth_SSBU.png/600px-Byleth_SSBU.png?7e694"},
+ {name: "Min Min", image: "https://www.ssbwiki.com/images/thumb/3/35/Min_Min_SSBU.png/600px-Min_Min_SSBU.png?0ab8d"},
+  {name: "Steve", image: "https://www.ssbwiki.com/images/thumb/3/3a/Steve_SSBU.png/439px-Steve_SSBU.png?8004d"},
+ {name: "Sephiroth", image: "https://www.ssbwiki.com/images/thumb/4/49/Sephiroth_SSBU.png/600px-Sephiroth_SSBU.png?970be"},
+  {name: "Pyra/Mythra", image: "https://www.ssbwiki.com/images/thumb/7/76/Pyra_%26_Mythra_SSBU.png/800px-Pyra_%26_Mythra_SSBU.png?d9ba7"},
+ {name: "Kazuya", image: "https://www.ssbwiki.com/images/thumb/d/d9/Kazuya_SSBU.png/600px-Kazuya_SSBU.png?98ba3"},
+  {name: "Sora", image: "https://www.ssbwiki.com/images/thumb/2/2d/Sora_SSBU.png/600px-Sora_SSBU.png?a886e"},
+ {name: "Mii Brawler", image: "https://www.ssbwiki.com/images/thumb/e/e4/Mii_Brawler_SSBU.png/600px-Mii_Brawler_SSBU.png?e2dbf"},
+  {name: "Mii Swordfighter", image: "https://www.ssbwiki.com/images/thumb/f/fa/Mii_Swordfighter_SSBU.png/600px-Mii_Swordfighter_SSBU.png?b23d1"},
+ {name: "Mii Gunner", image: "https://www.ssbwiki.com/images/thumb/e/e5/Mii_Gunner_SSBU.png/600px-Mii_Gunner_SSBU.png?31e91"},
+  
   // ... add the rest here following this pattern
 ];
 
