--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ const FIGHTERS = [
   { name: "Luigi", image: "https://www.ssbwiki.com/images/thumb/b/bb/Luigi_SSBU.png/547px-Luigi_SSBU.png?98af0" },
   { name: "Ness", image: "https://www.ssbwiki.com/images/thumb/8/82/Ness_SSBU.png/600px-Ness_SSBU.png?74584" },
   { name: "Captain Falcon", image: "https://www.ssbwiki.com/images/thumb/d/da/Captain_Falcon_SSBU.png/600px-Captain_Falcon_SSBU.png?aec93" },
-  { name: "Jigglypuff", image: "https://www.ssbwiki.com/images/thumb/6/6a/Jigglypuff_SSBU.png/600px-Jigglypuff_SSBU.png?a2c18" }
+  { name: "Jigglypuff", image: "https://www.ssbwiki.com/images/thumb/6/6a/Jigglypuff_SSBU.png/600px-Jigglypuff_SSBU.png?a2c18" },
   { name: "Peach", image: "https://www.ssbwiki.com/images/thumb/7/74/Peach_SSBU.png/531px-Peach_SSBU.png?17a3e"},
 { name: "Daisy", image: "https://www.ssbwiki.com/images/thumb/2/21/Daisy_SSBU.png/600px-Daisy_SSBU.png?6c633"},
 { name: "Bowser", image: "https://www.ssbwiki.com/images/thumb/4/49/Bowser_SSBU.png/600px-Bowser_SSBU.png?3df64"},
