--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ const FIGHTERS = [
   {name: "Mario", image: "https://www.ssbwiki.com/images/thumb/4/44/Mario_SSBU.png/600px-Mario_SSBU.png?04f61"},
   {name: "Donkey Kong", image: "https://www.ssbwiki.com/images/thumb/c/c9/Donkey_Kong_SSBU.png/600px-Donkey_Kong_SSBU.png?eaeca"},
   {name: "Link", image: "https://www.ssbwiki.com/images/thumb/8/84/Link_SSBU.png/600px-Link_SSBU.png?c3c4d"},
-  {name: "Samus & Dark Samus", image: "./samus.png"},
+  {name: "Samus/Dark Samus", image: "./samus.png"},
   {name: "Yoshi", image: "https://www.ssbwiki.com/images/thumb/8/8d/Yoshi_SSBU.png/600px-Yoshi_SSBU.png?6e636"},
   {name: "Kirby", image: "https://www.ssbwiki.com/images/thumb/0/07/Kirby_SSBU.png/600px-Kirby_SSBU.png?2b27a"},
   {name: "Fox", image: "https://www.ssbwiki.com/images/thumb/2/2f/Fox_SSBU.png/600px-Fox_SSBU.png?ced8f"},
@@ -91,7 +91,7 @@ const FIGHTERS = [
   {name: "Ness", image: "https://www.ssbwiki.com/images/thumb/8/82/Ness_SSBU.png/600px-Ness_SSBU.png?74584"},
   {name: "Captain Falcon", image: "https://www.ssbwiki.com/images/thumb/d/da/Captain_Falcon_SSBU.png/600px-Captain_Falcon_SSBU.png?aec93"},
   {name: "Jigglypuff", image: "https://www.ssbwiki.com/images/thumb/6/6a/Jigglypuff_SSBU.png/600px-Jigglypuff_SSBU.png?a2c18"},
-  {name: "Peach & Daisy", image: "./peachdaisy.png"},
+  {name: "Peach/Daisy", image: "./peachdaisy.png"},
   {name: "Bowser", image: "https://www.ssbwiki.com/images/thumb/4/49/Bowser_SSBU.png/600px-Bowser_SSBU.png?3df64"},
   {name: "Ice Climbers", image: "https://www.ssbwiki.com/images/thumb/1/12/Ice_Climbers_SSBU.png/600px-Ice_Climbers_SSBU.png?dc85a"},
   {name: "Sheik", image: "https://www.ssbwiki.com/images/thumb/0/00/Sheik_SSBU.png/600px-Sheik_SSBU.png?23081"},
@@ -108,7 +108,7 @@ const FIGHTERS = [
   {name: "Chrom", image: "https://www.ssbwiki.com/images/thumb/5/57/Chrom_SSBU.png/510px-Chrom_SSBU.png?9e715"},
   {name: "Mr. Game & Watch", image: "https://www.ssbwiki.com/images/thumb/c/cb/Mr._Game_%26_Watch_SSBU.png/600px-Mr._Game_%26_Watch_SSBU.png?d0b41"},
   {name: "Meta Knight", image: "https://www.ssbwiki.com/images/thumb/0/00/Meta_Knight_SSBU.png/600px-Meta_Knight_SSBU.png?5fbe9"},
-  {name: "Pit & Dark Pit", image: "./pits.png"},
+  {name: "Pit/Dark Pit", image: "./pits.png"},
   {name: "Zero Suit Samus", image: "https://www.ssbwiki.com/images/thumb/f/f0/Zero_Suit_Samus_SSBU.png/600px-Zero_Suit_Samus_SSBU.png?51df7"},
   {name: "Wario", image: "https://www.ssbwiki.com/images/thumb/0/04/Wario_SSBU.png/600px-Wario_SSBU.png?54ad1"},
   {name: "Snake", image: "https://www.ssbwiki.com/images/thumb/0/02/Snake_SSBU.png/492px-Snake_SSBU.png?3368c"},
@@ -142,7 +142,7 @@ const FIGHTERS = [
   {name: "Bayonetta", image: "https://www.ssbwiki.com/images/thumb/7/7c/Bayonetta_SSBU.png/611px-Bayonetta_SSBU.png?2c193"},
   {name: "Inkling", image: "https://www.ssbwiki.com/images/thumb/2/2e/Inkling_SSBU.png/603px-Inkling_SSBU.png?b7948"},
   {name: "Ridley", image: "https://www.ssbwiki.com/images/thumb/2/27/Ridley_SSBU.png/600px-Ridley_SSBU.png?fa328"},
-  {name: "Simon & Richter", image: "./belmonts.png"},
+  {name: "Simon/Richter", image: "./belmonts.png"},
   {name: "King K. Rool", image: "https://www.ssbwiki.com/images/thumb/b/b6/King_K._Rool_SSBU.png/600px-King_K._Rool_SSBU.png?94d39"},
   {name: "Isabelle", image: "https://www.ssbwiki.com/images/thumb/2/2b/Isabelle_SSBU.png/600px-Isabelle_SSBU.png?f09f3"},
   {name: "Incineroar", image: "https://www.ssbwiki.com/images/thumb/c/c4/Incineroar_SSBU.png/600px-Incineroar_SSBU.png?2efa0"},
