--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="card">
       <div class="topbar">
-        <div class="small">Fighters: <strong id="count">86</strong> • Possible unique matchups: <strong id="totalPairs">3655</strong></div>
+        <div class="small">Fighters: <strong id="count">82</strong> • Possible unique matchups: <strong id="totalPairs">3655</strong></div>
         <div class="small">Matches recorded: <strong id="matchesRecorded">0</strong></div>
       </div>
 
@@ -57,7 +57,7 @@
 
         <div class="controls">
           <button onclick="skipPair()" class="secondary">Skip</button>
-          <button onclick="generatePair()" class="secondary">New Pair</button>
+          <!-- <button onclick="generatePair()" class="secondary">New Pair</button> -->
           <button onclick="finish()">I'm done</button>
           <button onclick="resetAll()" class="secondary">Reset</button>
           <button onclick="exportJSON()" class="export">Export JSON</button>
