--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header>
       <div>
         <h1>Smash Ultimate — Pairwise er</h1>
-        <p class="lead">Click which fighter you prefer. Uses an Elo system.</p>
+        <p class="lead">Click which fighter you think is better. Uses an Elo system.</p>
       </div>
     </header>
 
