--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="container">
     <header>
       <div>
-        <h1>Smash Ultimate — Pairwise er</h1>
+        <h1>Super Smash Bros. Ultimate - Fighter Elo Ranking</h1>
         <p class="lead">Click which fighter you think is better. Uses an Elo system.</p>
       </div>
     </header>
