--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Smash Ultimate Pairwise Ranker</title>
   <style>
-    :root{--bg:#0f172a;--card:#0b1220;--muted:#94a3b8;--accent:#60a5fa;--glass:rgba(255,255,255,0.03)}
+    body {
+    background: black;
+    color: white;
+  }
+    /* :root{--bg:#0f172a;--card:#0b1220;--muted:#94a3b8;--accent:#60a5fa;--glass:rgba(255,255,255,0.03)}
     html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,'Helvetica Neue',Arial}
     body{background:linear-gradient(180deg,#041026 0%, #071428 50%);color:#e6eef8;padding:20px}
     .container{max-width:980px;margin:0 auto}
@@ -31,7 +35,7 @@
     .topbar{display:flex;justify-content:space-between;gap:12px;align-items:center;margin-bottom:12px}
     .export{background:linear-gradient(90deg,#86efac,#60a5fa);color:#05201a}
     footer{color:var(--muted);text-align:center;margin-top:18px}
-    @media(max-width:700px){.pair{flex-direction:column}.fighter{padding:12px}}
+    @media(max-width:700px){.pair{flex-direction:column}.fighter{padding:12px}} */
   </style>
 </head>
 <body>
