--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <!-- <button onclick="generatePair()" class="secondary">New Pair</button> -->
           <!-- <button onclick="finish()">I'm done</button> -->
         <div>
-          <button onclick="resetAll()" class="secondary">Reset</button>
+          <button onclick="resetAll()" class="secondary">Reset data</button>
           <!-- <button onclick="exportJSON()" class="export">Export JSON</button> -->
         </div>
       </div>
